[package]
name = "sabitsuku-d3d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
detour = "0.8.0"
winapi = { version = "0.3", features = ["d3d", "d3d9", 
                                        "d3d10", "d3d11", 
                                        "d3d12", "dxgi", 
                                        "dxgitype", "d3d9types", "d3dcommon",
                                        "winuser", "consoleapi", "errhandlingapi"]}

[lib]
crate-type=["rlib", "cdylib"]